migration/cortex-api-rest/cortex-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cortex-api-rest
spec:
  selector:
    matchLabels:
      app: cortex-api-rest
  template:
    metadata:
      labels:
        app: cortex-api-rest
    spec:
      containers:
      - name: cortex-api
        image: rishivantsingh9717/cortex-api-rest:1.0
        resources: {}
          # limits:
          #   cpu: 1000m
          #   memory: 1024Mi  

        ports:
        - containerPort: 9000
        livenessProbe:
          httpGet: 
            path: /v1/health
            port: 9000
          timeoutSeconds: 10
          periodSeconds: 4
          failureThreshold: 10
          initialDelaySeconds: 25
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /v1/health
            port: 9000
          timeoutSeconds: 10
          periodSeconds: 2
          failureThreshold: 10
          initialDelaySeconds: 15
          successThreshold: 1
