migration/cortex-api-rest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cortex-api-rest
spec:
  selector:
    app: cortex-api-rest
  ports:
  - name: traffic
    port: 9000
    targetPort: 9000
    protocol: TCP
  type: ClusterIP
